--- a/css/service.css
+++ b/css/service.css
@@ -44,11 +44,15 @@
     margin-top: 0;
     margin-bottom: 30px;
   }
-  
+
+  .bg-gradient-gray{
+      background-color: #b8c6db; background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
+  }
+
   section h3.section-subheading {
     font-size: 16px;
     font-weight: 400;
-    text-align: left;
+    text-align: center;
     line-height: 2;
     margin-bottom: 30px;
     text-transform: none;
