--- a/css/about.css
+++ b/css/about.css
@@ -701,3 +701,15 @@
     width: 75%;
     border: 0.5px grey solid;
   }
+
+.thumbnail {
+    position: relative;
+}
+
+.caption {
+    position: absolute;
+    top: 45%;
+    left: 0;
+    width: 100%;
+    font-size: x-large;
+}
