--- a/css/career.css
+++ b/css/career.css
@@ -176,7 +176,7 @@
   header.masthead {
     text-align: center;
     color: black;
-    background-image: url("../img/service/service-bg.png");
+    background-image: url("../img/Career/Desktop.png");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
