--- a/css/about.css
+++ b/css/about.css
@@ -48,7 +48,7 @@
   section h3.section-subheading {
     font-size: 16px;
     font-weight: 400;
-    text-align: center;
+    text-align: left;
     line-height: 2;
     margin-bottom: 30px;
     text-transform: none;
