--- a/css/about.css
+++ b/css/about.css
@@ -152,6 +152,7 @@
       -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
       transition: padding-top 0.3s, padding-bottom 0.3s;
       border: none;
+      background-color: transparent;
     }
     #mainNav .navbar-brand {
       font-size: 1.75em;
