--- a/css/service.css
+++ b/css/service.css
@@ -456,7 +456,7 @@
     color: white;
     border: 7px solid #e9ecef;
     border-radius: 100%;
-    background-color: #fed136;
+    background-color: #13AAE0;
   }
   
   .timeline > li .timeline-image h4 {
@@ -547,8 +547,8 @@
       padding: 0 20px 20px;
     }
     .timeline > li .timeline-image {
-      width: 150px;
-      height: 150px;
+      width: 70px;
+      height: 70px;
       margin-left: -75px;
     }
     .timeline > li .timeline-image h4 {
