some file changes

--- a/css/blog.css
+++ b/css/blog.css
@@ -192,7 +192,7 @@
   header.masthead {
     text-align: center;
     color: black;
-    background-image: url("../img/media-bg.png");
+    background-image: url("../img/media-bg.jpg");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
