--- a/css/blog.css
+++ b/css/blog.css
@@ -219,6 +219,12 @@
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 
   }
+
+  @media (min-width: 320px) {
+    header.masthead { 
+      width: 420px;
+    }
+  }
   
   @media (min-width: 768px) {
     header.masthead .intro-text {
