text colour of blog

--- a/css/about.css
+++ b/css/about.css
@@ -14,11 +14,11 @@
   }
   
   a {
-    color: #fed136;
+    color: black;
   }
   
   a:hover {
-    color: #fec503;
+    color: blue;
   }
   
   .text-primary {
