--- a/css/about.css
+++ b/css/about.css
@@ -8,6 +8,15 @@
     overflow-x: hidden;
     font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
+.column1 { 
+  border: none;
+  border-left: thick solid #ff0000;
+}
+  .partner { 
+    margin: auto;
+    display: block;
+    max-width: 80%;
+  }
   
   p {
     line-height: 1.75;
@@ -69,6 +78,7 @@
     section {
       padding: 150px 0;
     }
+ 
   }
   
   .btn {
@@ -154,6 +164,7 @@
       border: none;
       background-color: transparent;
     }
+
     #mainNav .navbar-brand {
       font-size: 1.75em;
       -webkit-transition: all 0.3s;
@@ -172,7 +183,7 @@
       padding: 12px 0;
     }
   }
-  
+
   header.masthead {
     text-align: center;
     color: black;
@@ -209,6 +220,11 @@
       padding-top: 300px;
       padding-bottom: 200px;
     }
+
+    .partner { 
+      width: 40%;
+    }
+
     header.masthead .intro-text .intro-lead-in {
       font-size: 50px;
       line-height: 50px;
@@ -304,7 +320,6 @@
       margin: 0 0 30px;
     }
   }
-  
   .portfolio-modal {
     padding-right: 0px !important;
   }
@@ -527,6 +542,10 @@
       padding: 0 30px 20px 20px;
       text-align: left;
     }
+    .col-lg-4 { 
+      flex: 25%;
+      max-width: 25%;
+    }
   }
   
   @media (min-width: 992px) {
@@ -711,6 +730,7 @@
     left: 0;
     width: 100%;
     font-size: x-large;
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 .contact-card-img{
