--- a/css/career.css
+++ b/css/career.css
@@ -3,7 +3,10 @@
  * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-agency/blob/master/LICENSE)
  */
-
+ .partner { 
+  margin: auto;
+  display: block;
+}
  body {
     overflow-x: hidden;
     font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
@@ -70,6 +73,7 @@
       padding: 150px 0;
     }
   }
+  
   
   .btn {
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
@@ -204,10 +208,19 @@
 
   }
   
+  @media (min-width: 995px) { 
+    .col-md-4 { 
+      flex: 25%;
+      max-width: 25%;
+    }
+  }
   @media (min-width: 768px) {
-    header.masthead .intro-text {
+    headcer.masthead .intro-text {
       padding-top: 300px;
       padding-bottom: 200px;
+    }
+    .partner { 
+      width: 50%;
     }
     header.masthead .intro-text .intro-lead-in {
       font-size: 50px;
