--- a/css/career.css
+++ b/css/career.css
@@ -3,10 +3,7 @@
  * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-agency/blob/master/LICENSE)
  */
- .partner { 
-  margin: auto;
-  display: block;
-}
+
  body {
     overflow-x: hidden;
     font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
@@ -746,6 +743,15 @@
     background-color: #F3F3F3;
 
     font-weight: 300;
+
+}
+
+#ukID { 
+  width: 100%;
+  padding: 50px 50px;
+  background-color: #F3F3F3;
+
+  font-weight: 300;
 
 }
 
