service image to show

--- a/css/service.css
+++ b/css/service.css
@@ -180,7 +180,7 @@
   header.masthead {
     text-align: center;
     color: black;
-    background-image: url("../img/service/service-bg.jpg");
+    background-image: url("../img/Service/service-bg.jpg");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
