--- a/css/blog.css
+++ b/css/blog.css
@@ -83,7 +83,7 @@
     font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
 
-  section h3.section-subheadingg {
+  section h3.section-subheading {
     font-size: 16px;
     font-weight: 400;
     margin-bottom: 75px;
